@@ -1,7 +1,7 @@
 package com.gmail.bobason01.gui;
 
 import com.gmail.bobason01.cache.PlayerCache;
-import com.gmail.bobason01.config.ConfigLoader;
+import com.gmail.bobason01.lang.LangManager;
 import com.gmail.bobason01.mail.MailService;
 import com.gmail.bobason01.utils.ItemBuilder;
 import org.bukkit.Bukkit;
@@ -21,7 +21,6 @@ import org.bukkit.plugin.Plugin;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 public class MailTargetSelectGUI implements Listener {
 
@@ -56,15 +55,14 @@ public class MailTargetSelectGUI implements Listener {
         }
         lastClick.set(now);
 
-        if (loadingSet.contains(uuid)) return;
-        loadingSet.add(uuid);
+        if (!loadingSet.add(uuid)) return;
         playerPageMap.put(uuid, targetPage);
 
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             List<OfflinePlayer> allPlayers = PlayerCache.getCachedPlayers().stream()
                     .filter(p -> p.getName() != null && !p.getUniqueId().equals(uuid))
                     .sorted(Comparator.comparing(OfflinePlayer::getName))
-                    .collect(Collectors.toList());
+                    .toList();
 
             int maxPage = Math.max((allPlayers.size() - 1) / PAGE_SIZE, 0);
             int safePage = Math.min(targetPage, maxPage);
@@ -79,13 +77,17 @@ public class MailTargetSelectGUI implements Listener {
             List<OfflinePlayer> pagePlayers = allPlayers.subList(start, end);
 
             Bukkit.getScheduler().runTask(plugin, () -> {
-                if (!player.isOnline() || !playerPageMap.containsKey(uuid) || playerPageMap.get(uuid) != safePage) {
+                if (!player.isOnline() || playerPageMap.getOrDefault(uuid, -1) != safePage) {
                     loadingSet.remove(uuid);
                     return;
                 }
 
-                Inventory inv = Bukkit.createInventory(player, 54,
-                        "대상 선택 " + (safePage + 1) + "/" + (maxPage + 1));
+                String lang = LangManager.getLanguage(uuid);
+                String title = LangManager.get(lang, "gui.target.title")
+                        .replace("%page%", String.valueOf(safePage + 1))
+                        .replace("%total%", String.valueOf(maxPage + 1));
+
+                Inventory inv = Bukkit.createInventory(player, 54, title);
 
                 for (int i = 0; i < pagePlayers.size(); i++) {
                     OfflinePlayer target = pagePlayers.get(i);
@@ -104,17 +106,21 @@ public class MailTargetSelectGUI implements Listener {
 
                 if (safePage < maxPage) {
                     inv.setItem(SLOT_NEXT, new ItemBuilder(Material.ARROW)
-                            .name("§a▶ 다음 페이지")
+                            .name("§a" + LangManager.get(lang, "gui.next"))
                             .build());
                 }
 
                 if (safePage > 0) {
                     inv.setItem(SLOT_PREV, new ItemBuilder(Material.ARROW)
-                            .name("§a◀ 이전 페이지")
+                            .name("§a" + LangManager.get(lang, "gui.previous"))
                             .build());
                 }
 
-                inv.setItem(SLOT_BACK, ConfigLoader.getGuiItem("back"));
+                inv.setItem(SLOT_BACK, new ItemBuilder(Material.BARRIER)
+                        .name("§c" + LangManager.get(lang, "gui.back.name"))
+                        .lore(LangManager.get(lang, "gui.back.lore"))
+                        .build());
+
                 player.openInventory(inv);
                 loadingSet.remove(uuid);
             });
@@ -124,15 +130,20 @@ public class MailTargetSelectGUI implements Listener {
     @EventHandler
     public void onClick(InventoryClickEvent e) {
         if (!(e.getWhoClicked() instanceof Player player)) return;
-        String title = e.getView().getTitle();
-        if (!title.startsWith("대상 선택")) return;
+
+        UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
+        String titlePrefix = LangManager.get(lang, "gui.target.title")
+                .replace("%page%", "")
+                .replace("%total%", "");
+
+        if (!e.getView().getTitle().startsWith(titlePrefix)) return;
 
         e.setCancelled(true);
         ItemStack clicked = e.getCurrentItem();
         if (clicked == null || clicked.getType().isAir()) return;
 
         int slot = e.getRawSlot();
-        UUID uuid = player.getUniqueId();
         int currentPage = playerPageMap.getOrDefault(uuid, 0);
 
         switch (slot) {
@@ -145,12 +156,12 @@ public class MailTargetSelectGUI implements Listener {
             }
             default -> {
                 if (!clicked.getType().equals(Material.PLAYER_HEAD)) return;
-                String name = clicked.getItemMeta().getDisplayName().replace("§e", "").trim();
+                String name = Objects.requireNonNull(clicked.getItemMeta()).getDisplayName().replace("§e", "").trim();
                 if (name.isEmpty()) return;
 
                 OfflinePlayer target = PlayerCache.getByName(name);
                 if (target == null || target.getUniqueId().equals(uuid)) {
-                    player.sendMessage("§c[우편] 유효하지 않은 대상입니다.");
+                    player.sendMessage(LangManager.get(uuid, "gui.target.invalid"));
                     player.playSound(player.getLocation(), Sound.BLOCK_NOTE_BLOCK_BASS, 1.0f, 0.6f);
                     return;
                 }
@@ -158,7 +169,7 @@ public class MailTargetSelectGUI implements Listener {
                 playerPageMap.remove(uuid);
                 loadingSet.remove(uuid);
                 MailService.setTarget(uuid, target);
-                player.sendMessage("§a[우편] 대상 선택됨: " + name);
+                player.sendMessage(LangManager.get(uuid, "gui.target.selected").replace("%target%", name));
                 player.playSound(player.getLocation(), Sound.ENTITY_EXPERIENCE_ORB_PICKUP, 1.0f, 1.2f);
                 new MailSendGUI(plugin).open(player);
             }
@@ -168,10 +179,15 @@ public class MailTargetSelectGUI implements Listener {
     @EventHandler
     public void onClose(InventoryCloseEvent e) {
         if (!(e.getPlayer() instanceof Player player)) return;
-        String title = e.getView().getTitle();
-        if (!title.startsWith("대상 선택")) return;
 
         UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
+        String titlePrefix = LangManager.get(lang, "gui.target.title")
+                .replace("%page%", "")
+                .replace("%total%", "");
+
+        if (!e.getView().getTitle().startsWith(titlePrefix)) return;
+
         playerPageMap.remove(uuid);
         loadingSet.remove(uuid);
     }
