@@ -1,7 +1,7 @@
 package com.gmail.bobason01.gui;
 
 import com.gmail.bobason01.cache.PlayerCache;
-import com.gmail.bobason01.config.ConfigLoader;
+import com.gmail.bobason01.lang.LangManager;
 import com.gmail.bobason01.mail.MailDataManager;
 import com.gmail.bobason01.utils.ItemBuilder;
 import org.bukkit.Bukkit;
@@ -22,7 +22,6 @@ import org.bukkit.plugin.Plugin;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 public class SendAllExcludeGUI implements Listener {
 
@@ -49,6 +48,7 @@ public class SendAllExcludeGUI implements Listener {
 
     public void open(Player player, int page) {
         UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
         if (!loadingSet.add(uuid)) return;
 
         pageMap.put(uuid, page);
@@ -57,7 +57,7 @@ public class SendAllExcludeGUI implements Listener {
             List<OfflinePlayer> players = PlayerCache.getCachedPlayers().stream()
                     .filter(p -> p.getName() != null && !p.getUniqueId().equals(uuid))
                     .sorted(Comparator.comparing(OfflinePlayer::getName))
-                    .collect(Collectors.toList());
+                    .toList();
 
             int maxPage = Math.max((players.size() - 1) / PAGE_SIZE, 0);
             int safePage = Math.min(Math.max(page, 0), maxPage);
@@ -71,7 +71,9 @@ public class SendAllExcludeGUI implements Listener {
                     if (!player.isOnline()) return;
 
                     Inventory inv = Bukkit.createInventory(player, 54,
-                            "제외 대상 선택 " + (safePage + 1) + "/" + (maxPage + 1));
+                            LangManager.get(lang, "gui.exclude.title")
+                                    .replace("%page%", Integer.toString(safePage + 1))
+                                    .replace("%total%", Integer.toString(maxPage + 1)));
 
                     for (int i = 0; i < subList.size(); i++) {
                         OfflinePlayer target = subList.get(i);
@@ -83,23 +85,31 @@ public class SendAllExcludeGUI implements Listener {
                         if (meta != null) {
                             meta.setOwningPlayer(target);
                             meta.setDisplayName((isExcluded ? "§c" : "§a") + target.getName());
-                            meta.setLore(Collections.singletonList(isExcluded ? "제외됨" : "포함됨"));
+                            meta.setLore(Collections.singletonList(LangManager.get(lang, isExcluded ? "gui.exclude.status.excluded" : "gui.exclude.status.included")));
                             head.setItemMeta(meta);
                             inv.setItem(i, head);
                         }
                     }
 
                     if (safePage > 0)
-                        inv.setItem(SLOT_PREV, new ItemBuilder(Material.ARROW).name("§a◀ 이전 페이지").build());
+                        inv.setItem(SLOT_PREV, new ItemBuilder(Material.ARROW)
+                                .name(LangManager.get(lang, "gui.previous"))
+                                .build());
                     if (safePage < maxPage)
-                        inv.setItem(SLOT_NEXT, new ItemBuilder(Material.ARROW).name("§a▶ 다음 페이지").build());
+                        inv.setItem(SLOT_NEXT, new ItemBuilder(Material.ARROW)
+                                .name(LangManager.get(lang, "gui.next"))
+                                .build());
 
                     inv.setItem(SLOT_SEARCH, new ItemBuilder(Material.COMPASS)
-                            .name("§b이름 검색")
-                            .lore("§7클릭하여 이름으로 검색")
+                            .name(LangManager.get(lang, "gui.exclude.search"))
+                            .lore(LangManager.get(lang, "gui.exclude.search.lore"))
                             .build());
 
-                    inv.setItem(SLOT_BACK, ConfigLoader.getGuiItem("back"));
+                    inv.setItem(SLOT_BACK, new ItemBuilder(Material.BARRIER)
+                            .name(LangManager.get(lang, "gui.back.name"))
+                            .lore(LangManager.get(lang, "gui.back.lore"))
+                            .build());
+
                     player.openInventory(inv);
                 } finally {
                     loadingSet.remove(uuid);
@@ -125,11 +135,14 @@ public class SendAllExcludeGUI implements Listener {
     @EventHandler
     public void onClick(InventoryClickEvent e) {
         if (!(e.getWhoClicked() instanceof Player player)) return;
-        String title = e.getView().getTitle();
-        if (!title.startsWith("제외 대상 선택")) return;
+        UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
+        String title = LangManager.get(lang, "gui.exclude.title")
+                .replace("%page%", "")
+                .replace("/%total%", "");
+        if (!e.getView().getTitle().startsWith(title)) return;
 
         e.setCancelled(true);
-        UUID uuid = player.getUniqueId();
         int slot = e.getRawSlot();
 
         if (slot < 0 || slot >= e.getInventory().getSize()) return;
@@ -154,25 +167,25 @@ public class SendAllExcludeGUI implements Listener {
             case SLOT_SEARCH -> {
                 player.closeInventory();
                 waitingForSearch.add(uuid);
-                player.sendMessage("§b제외/포함할 플레이어 이름을 입력하세요:");
+                player.sendMessage(LangManager.get(lang, "gui.exclude.search.prompt"));
             }
             default -> {
                 if (slot < PAGE_SIZE) {
                     ItemStack clicked = e.getInventory().getItem(slot);
                     if (clicked == null || !clicked.hasItemMeta()) return;
 
-                    String name = clicked.getItemMeta().getDisplayName().replace("§a", "").replace("§c", "").trim();
+                    String name = Objects.requireNonNull(clicked.getItemMeta()).getDisplayName().replace("§a", "").replace("§c", "").trim();
                     OfflinePlayer target = PlayerCache.getByName(name);
                     if (target == null) return;
 
                     UUID targetId = target.getUniqueId();
                     if (excluded.contains(targetId)) {
                         excluded.remove(targetId);
-                        player.sendMessage("§a" + name + "님이 포함되었습니다.");
+                        player.sendMessage(LangManager.get(lang, "gui.exclude.included").replace("%name%", name));
                         player.playSound(player.getLocation(), Sound.UI_BUTTON_CLICK, 1f, 1f);
                     } else {
                         excluded.add(targetId);
-                        player.sendMessage("§c" + name + "님이 제외되었습니다.");
+                        player.sendMessage(LangManager.get(lang, "gui.exclude.excluded").replace("%name%", name));
                         player.playSound(player.getLocation(), Sound.UI_BUTTON_CLICK, 1f, 1.2f);
                     }
                     MailDataManager.getInstance().setExclude(uuid, excluded);
@@ -186,9 +199,12 @@ public class SendAllExcludeGUI implements Listener {
     public void onClose(InventoryCloseEvent e) {
         if (!(e.getPlayer() instanceof Player player)) return;
         String title = e.getView().getTitle();
-        if (!title.startsWith("제외 대상 선택")) return;
-
         UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
+        String baseTitle = LangManager.get(lang, "gui.exclude.title")
+                .replace("%page%", "").replace("/%total%", "");
+        if (!title.startsWith(baseTitle)) return;
+
         pageMap.remove(uuid);
         loadingSet.remove(uuid);
     }
@@ -197,6 +213,7 @@ public class SendAllExcludeGUI implements Listener {
     public void onChat(AsyncPlayerChatEvent e) {
         Player player = e.getPlayer();
         UUID uuid = player.getUniqueId();
+        String lang = LangManager.getLanguage(uuid);
         if (!waitingForSearch.remove(uuid)) return;
 
         e.setCancelled(true);
@@ -207,7 +224,7 @@ public class SendAllExcludeGUI implements Listener {
             int currentPage = pageMap.getOrDefault(uuid, 0);
 
             if (target == null || target.getName() == null) {
-                player.sendMessage("§c플레이어를 찾을 수 없습니다: " + input);
+                player.sendMessage(LangManager.get(lang, "gui.exclude.notfound").replace("%input%", input));
                 open(player, currentPage);
                 return;
             }
@@ -217,10 +234,10 @@ public class SendAllExcludeGUI implements Listener {
 
             if (excluded.contains(targetId)) {
                 excluded.remove(targetId);
-                player.sendMessage("§a" + target.getName() + "님이 포함되었습니다.");
+                player.sendMessage(LangManager.get(lang, "gui.exclude.included").replace("%name%", target.getName()));
             } else {
                 excluded.add(targetId);
-                player.sendMessage("§c" + target.getName() + "님이 제외되었습니다.");
+                player.sendMessage(LangManager.get(lang, "gui.exclude.excluded").replace("%name%", target.getName()));
             }
 
             MailDataManager.getInstance().setExclude(uuid, excluded);
